# pyqt-utils

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
pyqt_utils/: __init__.py  __main__.py  app_conf.py  config.py  licenses.py  paths.py  styles.py  utils.py  version.py
pyqt_utils/scripts/: bump_version.py
