[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt-tools"
version = "0.1.0"
authors = [{ name = "Dominik Reinartz", email = "dominik.reinartz@proton.me" }]
description = "A set of classes and tools providing basic functionality useful in PyQt applications."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["pyqt", "tools", "gui"]
license = { text = "MIT" }
dependencies = ["PyQt6>=6.8.0"]

[project.optional-dependencies]
dev-tools = ["qt6-tools>=6.5.0.1.3"]
dev = ["mypy>=1.16.1", "flake8>=7.3.0"]

[project.scripts]
bump-version = "pyqt_utils.scripts.bump_version:main"
pyqt-utils = "pyqt_utils.__main__:main"

[tool.mypy]
files = ["pyqt_utils/", "scripts/"]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
follow_imports = "skip"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
